// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - ContactDetails when logged in as buddy renders correctly 1`] = `
<AppWrapper>
  <Navbar
    onClick={[Function]}
    type="back"
  />
  <Box>
    <Typography
      component="h2"
      variant="h2"
    >
      Contact Details
    </Typography>
    <CircularProgress />
  </Box>
  <BackgroundShape />
</AppWrapper>
`;

exports[`Component - ContactDetails when logged in as buddy renders correctly 2`] = `
<AppWrapper>
  <Navbar
    onClick={[Function]}
    type="back"
  />
  <Box>
    <Typography
      component="h2"
      variant="h2"
    >
      Contact Details
    </Typography>
    <UserDetails
      details={
        Object {
          "email": "tom@wipro.com",
          "name": "Tom Hanks",
          "notes": "Nice guy",
          "phoneNumber": "1234567",
          "photo": "some-url",
          "position": "Dev Ops",
          "role": "NEWBIE",
          "startDate": "2010-01-01",
        }
      }
    />
  </Box>
  <BackgroundShape />
</AppWrapper>
`;

exports[`Component - ContactDetails when logged in as newbie renders correctly 1`] = `
<AppWrapper>
  <Navbar
    onClick={[Function]}
    type="back"
  />
  <Box>
    <Typography
      component="h2"
      variant="h2"
    >
      Contact Details
    </Typography>
    <UserDetails
      details={
        Object {
          "email": "tom@wipro.com",
          "name": "Tom Hanks",
          "phoneNumber": "1234567",
          "photo": "some-url",
          "position": "Dev Ops",
          "role": "BUDDY",
          "startDate": "2010-01-01",
        }
      }
    />
  </Box>
  <BackgroundShape />
</AppWrapper>
`;

exports[`Component - ContactDetails when logged in as newbie renders correctly 2`] = `
<AppWrapper>
  <Navbar
    onClick={[Function]}
    type="back"
  />
  <Box>
    <Typography
      component="h2"
      variant="h2"
    >
      Contact Details
    </Typography>
    <UserDetails
      details={
        Object {
          "email": "tom@wipro.com",
          "name": "Tom Hanks",
          "phoneNumber": "1234567",
          "photo": "some-url",
          "position": "Dev Ops",
          "role": "BUDDY",
          "startDate": "2010-01-01",
        }
      }
    />
  </Box>
  <BackgroundShape />
</AppWrapper>
`;
